Fixed out of screen behavior.

--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+html {
+    overflow: hidden;
+}
+
 body {
     position: absolute;
     width: 100%;
